# furix-compliance-dash

./: .gitignore  README.md
engine/compliance_reporting/: README.md  __init__.py  __main__.py  admin_audit.py  assertions.py  attestation.py  attestation_store.py  audit_period.py  aws_boto3.py  collectors.py  config_assertions.py  connector_registry.py  connectors.py  control_profile.py  crosswalk_snapshot.json  delivery.py  demo.py  diff.py  evidence.py  evidence_crypto.py  exceptions.py  fixtures.py  history.py  legal_hold.py  manual_evidence.py  object_store.py  oscal.py  posture_run.py  pyproject.toml  registry.py  render_html.py  report_builder.py  retention.py  scim.py  settings.py  signing.py  test_attestation.py  test_attestation_store.py  test_aws_boto3.py  test_collectors.py  (+12 more)
engine/compliance_reporting/adapters/: __init__.py  dashboard.py  test_adapter.py
engine/compliance_reporting/detection/: __init__.py  resolver.py  sigma.py  sigmayaml.py  technique_map.json  technique_map.py  test_detection.py
engine/compliance_reporting/detection/fixtures/: rule_fixtures.json
engine/compliance_reporting/detection/rules/: azure_ca_policy_disabled.yml  cloudtrail_access_key_created.yml  cloudtrail_account_creation.yml  cloudtrail_console_no_mfa.yml  cloudtrail_disable_logging.yml  cloudtrail_open_security_group.yml  cloudtrail_priv_esc.yml  cloudtrail_root_usage.yml  cloudtrail_secrets_access.yml  gcp_service_account_key.yml  linux_reverse_shell.yml  okta_mfa_deactivated.yml  okta_super_admin.yml  ssh_bruteforce.yml  ssh_bruteforce_success.yml  windows_account_creation.yml  windows_clear_event_logs.yml  windows_disable_defender.yml  (+4 more)
engine/compliance_reporting/schemas/: oscal-1.2.1-furix.json
(+203 files in other folders)
